# fast_correlation

./: .gitignore  CMakeLists.txt  README.txt
include/: dat_reader.h  fx_correlator.h  time_domain_output.h
src/: correlation_td.cu  dat_reader.cpp  fx_correlator.cu  fx_output.cpp  main_fx.cpp  main_fx_multi.cpp  main_td.cpp  time_domain_output.cpp
